--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "2.0.0",
+    "com.unity.animation.rigging": "1.3.0",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.terrain-tools": "5.1.2",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.accessibility": "1.0.0",
